evenements crud fonctionnel (sans tests ni affichage)

--- a/src/app/components/partials/navbar/navbar.html
+++ b/src/app/components/partials/navbar/navbar.html
@@ -20,7 +20,7 @@
           <a class="nav-link" routerLink="/">Accueil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/events">Événements</a>
+          <a class="nav-link" routerLink="/evenements">Événements</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/volunteer">Bénévolat</a>
